fixed text overlapping from card content

--- a/pc_prebuilt/pc_prebuilt.css
+++ b/pc_prebuilt/pc_prebuilt.css
@@ -238,14 +238,18 @@ body {
 .card-subtitle h2 {
     color: blueviolet;
 }
-.card-info { 
+.card-fmo-info{ 
     display: flex;
     position: absolute;
     right: 10px;
-    top: 116px;
+    top: 120px;
     text-align: end;
     line-height: 25px;
     letter-spacing: 1px;
+}
+
+.card-fmo-info *{
+    font-size: 14px;
 }
 
 .rating-container {
